Mobile template: - Fix alignment of contact name in addressbook view template

--- a/addressbook/templates/mobile/app.less
+++ b/addressbook/templates/mobile/app.less
@@ -32,6 +32,8 @@
 		#addressbook-view_n_fn {
 			border: none;
 			text-align: center;
+			display:inline-block;
+			width:99%;
 			span {
 				.mob-fontsize-xl;
 			}
@@ -78,7 +80,7 @@
 					height: 30px;
 				}
 			}
-			
+
 		}
 		.typeIcon { height: 16px; width: 16px; }
 		.editname{
